Grammar2Model.examples.skeleton/files/src/LanguageGrammar.g3
/** 
 * An example grammar for a simple language
 */

grammar LanguageGrammar;

options {
	backtrack=true; 
}

mainRule
	: statement*
	;

		
statement
	: print_statement
	;
	
print_statement
	: 'print' DQVAL
	;


DQUOTE : '\u0022';
DQVAL  : DQUOTE (options {greedy=false;} : .)* DQUOTE;

WS 	   : (' ' | '\t' | '\n' | '\r')+ {$channel=HIDDEN;};
COMMENT
    : '/*' ( options {greedy=false;} : . )* '*/' {$channel=HIDDEN;}
    ;    

LINE_COMMENT
    : '//' ~('\n'|'\r')* '\r'? '\n' {$channel=HIDDEN;}
    ;
